src/parser-exported.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

function peg$subclass(child, parent) {
    function ctor() {
        this.constructor = child;
    }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = 'SyntaxError';

    if (typeof Error.captureStackTrace === 'function') {
        Error.captureStackTrace(this, peg$SyntaxError);
    }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function (expected, found) {
    const DESCRIBE_EXPECTATION_FNS = {
        literal(expectation) {
            return `"${literalEscape(expectation.text)}"`;
        },

        class(expectation) {
            let escapedParts = '';
            let i;

            for (i = 0; i < expectation.parts.length; i++) {
                escapedParts +=
                    expectation.parts[i] instanceof Array
                        ? `${classEscape(expectation.parts[i][0])}-${classEscape(
                              expectation.parts[i][1]
                          )}`
                        : classEscape(expectation.parts[i]);
            }

            return `[${expectation.inverted ? '^' : ''}${escapedParts}]`;
        },

        any(expectation) {
            return 'any character';
        },

        end(expectation) {
            return 'end of input';
        },

        other(expectation) {
            return expectation.description;
        },
    };

    function hex(ch) {
        return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
        return s
            .replace(/\\/g, '\\\\')
            .replace(/"/g, '\\"')
            .replace(/\0/g, '\\0')
            .replace(/\t/g, '\\t')
            .replace(/\n/g, '\\n')
            .replace(/\r/g, '\\r')
            .replace(/[\x00-\x0F]/g, function (ch) {
                return `\\x0${hex(ch)}`;
            })
            .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
                return `\\x${hex(ch)}`;
            });
    }

    function classEscape(s) {
        return s
            .replace(/\\/g, '\\\\')
            .replace(/\]/g, '\\]')
            .replace(/\^/g, '\\^')
            .replace(/-/g, '\\-')
            .replace(/\0/g, '\\0')
            .replace(/\t/g, '\\t')
            .replace(/\n/g, '\\n')
            .replace(/\r/g, '\\r')
            .replace(/[\x00-\x0F]/g, function (ch) {
                return `\\x0${hex(ch)}`;
            })
            .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
                return `\\x${hex(ch)}`;
            });
    }

    function describeExpectation(expectation) {
        return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
        const descriptions = new Array(expected.length);
        let i;
        let j;

        for (i = 0; i < expected.length; i++) {
            descriptions[i] = describeExpectation(expected[i]);
        }

        descriptions.sort();

        if (descriptions.length > 0) {
            for (i = 1, j = 1; i < descriptions.length; i++) {
                if (descriptions[i - 1] !== descriptions[i]) {
                    descriptions[j] = descriptions[i];
                    j++;
                }
            }
            descriptions.length = j;
        }

        switch (descriptions.length) {
            case 1:
                return descriptions[0];

            case 2:
                return `${descriptions[0]} or ${descriptions[1]}`;

            default:
                return `${descriptions.slice(0, -1).join(', ')}, or ${
                    descriptions[descriptions.length - 1]
                }`;
        }
    }

    function describeFound(found) {
        return found ? `"${literalEscape(found)}"` : 'end of input';
    }

    return `Expected ${describeExpected(expected)} but ${describeFound(found)} found.`;
};

function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    const peg$FAILED = {};
    const peg$startRuleFunctions = { start: peg$parsestart };
    let peg$startRuleFunction = peg$parsestart;
    const peg$c0 = function (program) {
        return program;
    };
    const peg$c1 = function (input, output, meta) {
        return { input, output, meta };
    };
    const peg$c2 = 'INPUT.';
    const peg$c3 = peg$literalExpectation('INPUT.', false);
    const peg$c4 = function (type, header, data) {
        return { type, dataHeader: header, data };
    };
    const peg$c5 = 'OUTPUT.';
    const peg$c6 = peg$literalExpectation('OUTPUT.', false);
    const peg$c7 = 'METADATA.';
    const peg$c8 = peg$literalExpectation('METADATA.', false);
    const peg$c9 = function (str) {
        return str;
    };
    const peg$c10 = ';';
    const peg$c11 = peg$literalExpectation(';', false);
    const peg$c12 = '\n';
    const peg$c13 = peg$literalExpectation('\n', false);
    const peg$c14 = '|';
    const peg$c15 = peg$literalExpectation('|', false);
    const peg$c16 = function (elems) {
        return elems;
    };
    const peg$c17 = ':';
    const peg$c18 = peg$literalExpectation(':', false);
    const peg$c19 = function (columns, context) {
        return { context, cells: columns };
    };
    const peg$c20 = function (rows, p, a) {
        return { property: p, 'property-operations': a, cells: rows };
    };
    const peg$c21 = '"';
    const peg$c22 = peg$literalExpectation('"', false);
    const peg$c23 = function (prop) {
        return prop;
    };
    const peg$c24 = '=';
    const peg$c25 = peg$literalExpectation('=', false);
    const peg$c26 = function (o) {
        return o;
    };
    const peg$c27 = function (op, dox, nop) {
        return [op, dox].concat(nop);
    };
    const peg$c28 = function (op, dox, op2) {
        return [op, dox, op2];
    };
    const peg$c29 = '*';
    const peg$c30 = peg$literalExpectation('*', false);
    const peg$c31 = function () {
        return '*';
    };
    const peg$c32 = '/';
    const peg$c33 = peg$literalExpectation('/', false);
    const peg$c34 = function () {
        return '/';
    };
    const peg$c35 = '%';
    const peg$c36 = peg$literalExpectation('%', false);
    const peg$c37 = function () {
        return '%';
    };
    const peg$c38 = '+';
    const peg$c39 = peg$literalExpectation('+', false);
    const peg$c40 = function () {
        return '+';
    };
    const peg$c41 = '-';
    const peg$c42 = peg$literalExpectation('-', false);
    const peg$c43 = function () {
        return '-';
    };
    const peg$c44 = /^[0-9A-Za-z]/;
    const peg$c45 = peg$classExpectation(
        [
            ['0', '9'],
            ['A', 'Z'],
            ['a', 'z'],
        ],
        false,
        false
    );
    const peg$c46 = function (val, matches) {
        return { value: val, 'possible-matches': matches };
    };
    const peg$c47 = '==';
    const peg$c48 = peg$literalExpectation('==', false);
    const peg$c49 = function (matches) {
        return matches;
    };
    const peg$c50 = ',';
    const peg$c51 = peg$literalExpectation(',', false);
    const peg$c52 = function (val) {
        return val;
    };
    const peg$c53 = function (content) {
        return content;
    };
    const peg$c54 = function (con) {
        return con;
    };
    const peg$c55 = /^[<>{}@()0-9A-Za-z\-_:+,.\/\n\r ]/;
    const peg$c56 = peg$classExpectation(
        [
            '<',
            '>',
            '{',
            '}',
            '@',
            '(',
            ')',
            ['0', '9'],
            ['A', 'Z'],
            ['a', 'z'],
            '-',
            '_',
            ':',
            '+',
            ',',
            '.',
            '/',
            '\n',
            '\r',
            ' ',
        ],
        false,
        false
    );
    const peg$c57 = function (str) {
        return str.join('').trim();
    };
    const peg$c58 = peg$otherExpectation('integer');
    const peg$c59 = /^[0-9]/;
    const peg$c60 = peg$classExpectation([['0', '9']], false, false);
    const peg$c61 = function () {
        return parseInt(text(), 10);
    };
    const peg$c62 = '.';
    const peg$c63 = peg$literalExpectation('.', false);
    const peg$c64 = function () {
        return parseFloat(text(), 10);
    };
    const peg$c65 = peg$otherExpectation('whitespace');
    const peg$c66 = /^[ \t\n\r]/;
    const peg$c67 = peg$classExpectation([' ', '\t', '\n', '\r'], false, false);
    const peg$c68 = function () {};
    const peg$c69 = '//';
    const peg$c70 = peg$literalExpectation('//', false);
    const peg$c71 = /^[^(\n)]/;
    const peg$c72 = peg$classExpectation(['(', '\n', ')'], true, false);
    let peg$currPos = 0;
    let peg$savedPos = 0;
    const peg$posDetailsCache = [{ line: 1, column: 1 }];
    let peg$maxFailPos = 0;
    let peg$maxFailExpected = [];
    let peg$silentFails = 0;
    let peg$result;

    if ('startRule' in options) {
        if (!(options.startRule in peg$startRuleFunctions)) {
            throw new Error(`Can't start parsing from rule "${options.startRule}".`);
        }

        peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
        return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
        return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
        location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos);

        throw peg$buildStructuredError(
            [peg$otherExpectation(description)],
            input.substring(peg$savedPos, peg$currPos),
            location
        );
    }

    function error(message, location) {
        location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos);

        throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
        return { type: 'literal', text, ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
        return { type: 'class', parts, inverted, ignoreCase };
    }

    function peg$anyExpectation() {
        return { type: 'any' };
    }

    function peg$endExpectation() {
        return { type: 'end' };
    }

    function peg$otherExpectation(description) {
        return { type: 'other', description };
    }

    function peg$computePosDetails(pos) {
        let details = peg$posDetailsCache[pos];
        let p;

        if (details) {
            return details;
        }
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
            p--;
        }

        details = peg$posDetailsCache[p];
        details = {
            line: details.line,
            column: details.column,
        };

        while (p < pos) {
            if (input.charCodeAt(p) === 10) {
                details.line++;
                details.column = 1;
            } else {
                details.column++;
            }

            p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
    }

    function peg$computeLocation(startPos, endPos) {
        const startPosDetails = peg$computePosDetails(startPos);
        const endPosDetails = peg$computePosDetails(endPos);

        return {
            start: {
                offset: startPos,
                line: startPosDetails.line,
                column: startPosDetails.column,
            },
            end: {
                offset: endPos,
                line: endPosDetails.line,
                column: endPosDetails.column,
            },
        };
    }

    function peg$fail(expected) {
        if (peg$currPos < peg$maxFailPos) {
            return;
        }

        if (peg$currPos > peg$maxFailPos) {
            peg$maxFailPos = peg$currPos;
            peg$maxFailExpected = [];
        }

        peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
        return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
        return new peg$SyntaxError(
            peg$SyntaxError.buildMessage(expected, found),
            expected,
            found,
            location
        );
    }

    function peg$parsestart() {
        let s0;
        let s1;
        let s2;
        let s3;

        s0 = peg$currPos;
        s1 = peg$parse_();
        if (s1 !== peg$FAILED) {
            s2 = peg$parseProgram();
            if (s2 !== peg$FAILED) {
                s3 = peg$parse_();
                if (s3 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c0(s2);
                    s0 = s1;
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseProgram() {
        let s0;
        let s1;
        let s2;
        let s3;
        let s4;
        let s5;
        let s6;

        s0 = peg$currPos;
        s1 = [];
        s2 = peg$parseInputSection();
        if (s2 !== peg$FAILED) {
            while (s2 !== peg$FAILED) {
                s1.push(s2);
                s2 = peg$parseInputSection();
            }
        } else {
            s1 = peg$FAILED;
        }
        if (s1 === peg$FAILED) {
            s1 = null;
        }
        if (s1 !== peg$FAILED) {
            s2 = peg$parse_();
            if (s2 !== peg$FAILED) {
                s3 = [];
                s4 = peg$parseOutputSection();
                if (s4 !== peg$FAILED) {
                    while (s4 !== peg$FAILED) {
                        s3.push(s4);
                        s4 = peg$parseOutputSection();
                    }
                } else {
                    s3 = peg$FAILED;
                }
                if (s3 === peg$FAILED) {
                    s3 = null;
                }
                if (s3 !== peg$FAILED) {
                    s4 = peg$parse_();
                    if (s4 !== peg$FAILED) {
                        s5 = [];
                        s6 = peg$parseMetaSection();
                        if (s6 !== peg$FAILED) {
                            while (s6 !== peg$FAILED) {
                                s5.push(s6);
                                s6 = peg$parseMetaSection();
                            }
                        } else {
                            s5 = peg$FAILED;
                        }
                        if (s5 === peg$FAILED) {
                            s5 = null;
                        }
                        if (s5 !== peg$FAILED) {
                            peg$savedPos = s0;
                            s1 = peg$c1(s1, s3, s5);
                            s0 = s1;
                        } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseInputSection() {
        let s0;
        let s1;
        let s2;
        let s3;
        let s4;
        let s5;
        let s6;
        let s7;
        let s8;

        s0 = peg$currPos;
        if (input.substr(peg$currPos, 6) === peg$c2) {
            s1 = peg$c2;
            peg$currPos += 6;
        } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$c3);
            }
        }
        if (s1 !== peg$FAILED) {
            s2 = peg$parse_();
            if (s2 !== peg$FAILED) {
                s3 = peg$parseSectionType();
                if (s3 !== peg$FAILED) {
                    s4 = peg$parse_();
                    if (s4 !== peg$FAILED) {
                        s5 = peg$parseEOL();
                        if (s5 !== peg$FAILED) {
                            s6 = peg$parseDataHeader();
                            if (s6 === peg$FAILED) {
                                s6 = null;
                            }
                            if (s6 !== peg$FAILED) {
                                s7 = [];
                                s8 = peg$parseInputData();
                                if (s8 !== peg$FAILED) {
                                    while (s8 !== peg$FAILED) {
                                        s7.push(s8);
                                        s8 = peg$parseInputData();
                                    }
                                } else {
                                    s7 = peg$FAILED;
                                }
                                if (s7 !== peg$FAILED) {
                                    peg$savedPos = s0;
                                    s1 = peg$c4(s3, s6, s7);
                                    s0 = s1;
                                } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                }
                            } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                            }
                        } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseOutputSection() {
        let s0;
        let s1;
        let s2;
        let s3;
        let s4;
        let s5;
        let s6;
        let s7;

        s0 = peg$currPos;
        if (input.substr(peg$currPos, 7) === peg$c5) {
            s1 = peg$c5;
            peg$currPos += 7;
        } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$c6);
            }
        }
        if (s1 !== peg$FAILED) {
            s2 = peg$parseSectionType();
            if (s2 !== peg$FAILED) {
                s3 = peg$parse_();
                if (s3 !== peg$FAILED) {
                    s4 = peg$parseEOL();
                    if (s4 !== peg$FAILED) {
                        s5 = peg$parseDataHeader();
                        if (s5 === peg$FAILED) {
                            s5 = null;
                        }
                        if (s5 !== peg$FAILED) {
                            s6 = [];
                            s7 = peg$parseOutputData();
                            if (s7 !== peg$FAILED) {
                                while (s7 !== peg$FAILED) {
                                    s6.push(s7);
                                    s7 = peg$parseOutputData();
                                }
                            } else {
                                s6 = peg$FAILED;
                            }
                            if (s6 !== peg$FAILED) {
                                peg$savedPos = s0;
                                s1 = peg$c4(s2, s5, s6);
                                s0 = s1;
                            } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                            }
                        } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseMetaSection() {
        let s0;
        let s1;
        let s2;
        let s3;
        let s4;
        let s5;
        let s6;
        let s7;

        s0 = peg$currPos;
        if (input.substr(peg$currPos, 9) === peg$c7) {
            s1 = peg$c7;
            peg$currPos += 9;
        } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$c8);
            }
        }
        if (s1 !== peg$FAILED) {
            s2 = peg$parseSectionType();
            if (s2 !== peg$FAILED) {
                s3 = peg$parse_();
                if (s3 !== peg$FAILED) {
                    s4 = peg$parseEOL();
                    if (s4 !== peg$FAILED) {
                        s5 = peg$parseDataHeader();
                        if (s5 === peg$FAILED) {
                            s5 = null;
                        }
                        if (s5 !== peg$FAILED) {
                            s6 = [];
                            s7 = peg$parseInputData();
                            if (s7 !== peg$FAILED) {
                                while (s7 !== peg$FAILED) {
                                    s6.push(s7);
                                    s7 = peg$parseInputData();
                                }
                            } else {
                                s6 = peg$FAILED;
                            }
                            if (s6 !== peg$FAILED) {
                                peg$savedPos = s0;
                                s1 = peg$c4(s2, s5, s6);
                                s0 = s1;
                            } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                            }
                        } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseSectionType() {
        let s0;
        let s1;

        s0 = peg$currPos;
        s1 = peg$parseString();
        if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c9(s1);
        }
        s0 = s1;

        return s0;
    }

    function peg$parseEOL() {
        let s0;
        let s1;
        let s2;
        let s3;
        let s4;
        let s5;
        let s6;
        let s7;
        let s8;

        s0 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 59) {
            s1 = peg$c10;
            peg$currPos++;
        } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) {
                peg$fail(peg$c11);
            }
        }
        if (s1 !== peg$FAILED) {
            s2 = peg$parse_();
            if (s2 !== peg$FAILED) {
                s3 = peg$parseComment();
                if (s3 === peg$FAILED) {
                    s3 = null;
                }
                if (s3 !== peg$FAILED) {
                    s4 = [];
                    s5 = peg$currPos;
                    if (input.charCodeAt(peg$currPos) === 10) {
                        s6 = peg$c12;
                        peg$currPos++;
                    } else {
                        s6 = peg$FAILED;
                        if (peg$silentFails === 0) {
                            peg$fail(peg$c13);
                        }
                    }
                    if (s6 !== peg$FAILED) {
                        s7 = peg$parse_();
                        if (s7 !== peg$FAILED) {
                            s8 = peg$parseComment();
                            if (s8 === peg$FAILED) {
                                s8 = null;
                            }
                            if (s8 !== peg$FAILED) {
                                s6 = [s6, s7, s8];
                                s5 = s6;
                            } else {
                                peg$currPos = s5;
                                s5 = peg$FAILED;
                            }
                        } else {
                            peg$currPos = s5;
                            s5 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s5;
                        s5 = peg$FAILED;
                    }
                    while (s5 !== peg$FAILED) {
                        s4.push(s5);
                        s5 = peg$currPos;
                        if (input.charCodeAt(peg$currPos) === 10) {
                            s6 = peg$c12;
                            peg$currPos++;
                        } else {
                            s6 = peg$FAILED;
                            if (peg$silentFails === 0) {
                                peg$fail(peg$c13);
                            }
                        }
                        if (s6 !== peg$FAILED) {
                            s7 = peg$parse_();
                            if (s7 !== peg$FAILED) {
                                s8 = peg$parseComment();
                                if (s8 === peg$FAILED) {
                                    s8 = null;
                                }
                                if (s8 !== peg$FAILED) {
                                    s6 = [s6, s7, s8];
                                    s5 = s6;
                                } else {
                                    peg$currPos = s5;
                                    s5 = peg$FAILED;
                                }
                            } else {
                                peg$currPos = s5;
                                s5 = peg$FAILED;
                            }
                        } else {
                            peg$currPos = s5;
                            s5 = peg$FAILED;
                        }
                    }
                    if (s4 !== peg$FAILED) {
                        s1 = [s1, s2, s3, s4];
                        s0 = s1;
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseDataHeader() {
        let s0;
        let s1;
        let s2;
        let s3;
        let s4;
        let s5;
        let s6;
        let s7;
        let s8;

        s0 = peg$currPos;
        s1 = peg$parse_();
        if (s1 !== peg$FAILED) {
            s2 = peg$parseRowNumber();
            if (s2 === peg$FAILED) {
                s2 = null;
            }
            if (s2 !== peg$FAILED) {
                s3 = peg$parse_();
                if (s3 !== peg$FAILED) {
                    s4 = [];
                    s5 = peg$parseElement();
                    if (s5 !== peg$FAILED) {
                        while (s5 !== peg$FAILED) {
                            s4.push(s5);
                            s5 = peg$parseElement();
                        }
                    } else {
                        s4 = peg$FAILED;
                    }
                    if (s4 !== peg$FAILED) {
                        s5 = peg$parse_();
                        if (s5 !== peg$FAILED) {
                            if (input.charCodeAt(peg$currPos) === 124) {
                                s6 = peg$c14;
                                peg$currPos++;
                            } else {
                                s6 = peg$FAILED;
                                if (peg$silentFails === 0) {
                                    peg$fail(peg$c15);
                                }
                            }
                            if (s6 !== peg$FAILED) {
                                s7 = peg$parse_();
                                if (s7 !== peg$FAILED) {
                                    s8 = peg$parseEOL();
                                    if (s8 !== peg$FAILED) {
                                        peg$savedPos = s0;
                                        s1 = peg$c16(s4);
                                        s0 = s1;
                                    } else {
                                        peg$currPos = s0;
                                        s0 = peg$FAILED;
                                    }
                                } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                }
                            } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                            }
                        } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseInputData() {
        let s0;
        let s1;
        let s2;
        let s3;
        let s4;
        let s5;
        let s6;
        let s7;
        let s8;
        let s9;
        let s10;
        let s11;
        let s12;

        s0 = peg$currPos;
        s1 = peg$parse_();
        if (s1 !== peg$FAILED) {
            s2 = peg$parseRowNumber();
            if (s2 === peg$FAILED) {
                s2 = null;
            }
            if (s2 !== peg$FAILED) {
                s3 = peg$parse_();
                if (s3 !== peg$FAILED) {
                    s4 = [];
                    s5 = peg$parseElement();
                    if (s5 !== peg$FAILED) {
                        while (s5 !== peg$FAILED) {
                            s4.push(s5);
                            s5 = peg$parseElement();
                        }
                    } else {
                        s4 = peg$FAILED;
                    }
                    if (s4 !== peg$FAILED) {
                        s5 = peg$parse_();
                        if (s5 !== peg$FAILED) {
                            if (input.charCodeAt(peg$currPos) === 124) {
                                s6 = peg$c14;
                                peg$currPos++;
                            } else {
                                s6 = peg$FAILED;
                                if (peg$silentFails === 0) {
                                    peg$fail(peg$c15);
                                }
                            }
                            if (s6 !== peg$FAILED) {
                                s7 = peg$parse_();
                                if (s7 !== peg$FAILED) {
                                    if (input.charCodeAt(peg$currPos) === 58) {
                                        s8 = peg$c17;
                                        peg$currPos++;
                                    } else {
                                        s8 = peg$FAILED;
                                        if (peg$silentFails === 0) {
                                            peg$fail(peg$c18);
                                        }
                                    }
                                    if (s8 !== peg$FAILED) {
                                        s9 = peg$parse_();
                                        if (s9 !== peg$FAILED) {
                                            s10 = peg$parseImperative();
                                            if (s10 !== peg$FAILED) {
                                                s11 = peg$parse_();
                                                if (s11 !== peg$FAILED) {
                                                    s12 = peg$parseEOL();
                                                    if (s12 !== peg$FAILED) {
                                                        peg$savedPos = s0;
                                                        s1 = peg$c19(s4, s10);
                                                        s0 = s1;
                                                    } else {
                                                        peg$currPos = s0;
                                                        s0 = peg$FAILED;
                                                    }
                                                } else {
                                                    peg$currPos = s0;
                                                    s0 = peg$FAILED;
                                                }
                                            } else {
                                                peg$currPos = s0;
                                                s0 = peg$FAILED;
                                            }
                                        } else {
                                            peg$currPos = s0;
                                            s0 = peg$FAILED;
                                        }
                                    } else {
                                        peg$currPos = s0;
                                        s0 = peg$FAILED;
                                    }
                                } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                }
                            } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                            }
                        } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
        } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
        }

        return s0;
    }

    function peg$parseOutputData() {
        let s0;
        let s1;
        let s2;
        let s3;
        let s4;
        let s5;
        let s6;
        let s7;
        let s8;
        let s9;
        let s10;
        let s11;
        let s12;
        let s13;
